Fix popup toggle alignment

--- a/extension/popup/popup.css
+++ b/extension/popup/popup.css
@@ -268,6 +268,8 @@ body {
     position: relative;
     width: 46px;
     height: 26px;
+    margin: 0;
+    display: block;
     appearance: none;
     background-color: var(--divider);
     border-radius: 999px;
@@ -279,8 +281,8 @@ body {
 .toggle__input::after {
     content: '';
     position: absolute;
-    top: 3px;
-    left: 3px;
+    top: 4px;
+    left: 4px;
     width: 18px;
     height: 18px;
     border-radius: 50%;
